[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-bigtable-geyser-models"
description = "The Solana Bigtable Object Models."
version = "1.10.5"
repository = "https://github.com/solana-labs/solana-bigtable-geyser-models"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-bigtable-geyser-models"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
prost = "0.9.0"
prost-types = "0.9.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.74"
solana-account-decoder = { version = "=1.10.31" }
solana-sdk = { version = "=1.10.31" }
solana-transaction-status = { version = "=1.10.31" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
tonic = { version = "0.6.2", features = ["tls", "transport"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
tonic-build = "0.6.2"
